# packages/api-contract/openapi.json
@@ -26,6 +26,10 @@
               }
             ]
           },
+          "document_count": {
+            "default": 0,
+            "type": "integer"
+          },
           "is_active": {
             "type": "boolean"
           },
